--- a/style/main.css
+++ b/style/main.css
@@ -94,4 +94,11 @@ body {
     width: 100%;
     margin: 0 auto;
   }
+
+  .collapse {
+    display: block !important;
+  }
+  .inline-menu {
+    display: inline-block !important;
+  }
 }
